<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/abc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/reviewLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@color/cardview_shadow_start_color"
        android:elevation="8dp"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rate Your Experience"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Enter your review comment"
            android:textColorHint="#9e9e9e"
            android:backgroundTint="#c8c8c8"
            android:padding="10dp"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Submit Review"
            android:textColor="@android:color/white"
            android:background="@color/material_dynamic_tertiary30"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </LinearLayout>

</RelativeLayout>